--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -46,6 +46,9 @@ glusterfs
 {{ item.host }} glusterfs_devices="[ '/dev/xvdc' ]"
 {% endfor %}
 
+[bastion]
+{{ OCP_BASTION_NODE }}
+
 [OSEv3:vars]
 
 # ssh connection
