--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -78,6 +78,7 @@ openshift_master_htpasswd_users={'admin':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/'
 
 deployment_type=openshift-enterprise
 openshift_disable_check=disk_availability,memory_availability
+openshift_clock_enabled=true
 
 # Wildcard application hostname suffix
 
