added storage limit

--- a/resource-quota.j2
+++ b/resource-quota.j2
@@ -9,3 +9,4 @@ spec:
     requests.memory: "{{ project_requestMemory }}" 
     limits.cpu: "{{ project_limitsCpu }}"
     limits.memory: "{{ project_limitsMemory }}"
+    requests.storage: "{{ project_limitStorage }}"
