log and metrics options

--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -149,6 +149,8 @@ openshift_logging_es_nodeselector={"region":"infra"}
 openshift_logging_kibana_nodeselector={"region":"infra"}
 openshift_logging_curator_nodeselector={"region":"infra"}
 openshift_logging_es_memory_limit=2G
+openshift_logging_es_pvc_size=5Gi
+openshift_logging_curator_default_days=7
 
 # Metrics
 
@@ -158,6 +160,7 @@ openshift_metrics_hawkular_nodeselector={"region":"infra"}
 openshift_metrics_cassandra_nodeselector={"region":"infra"}
 openshift_metrics_heapster_nodeselector={"region":"infra"}
 openshift_metrics_cassandra_limits_memory=2Gi
+openshift_metrics_cassandra_pvc_size=5Gi
 
 
 
