--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -141,7 +141,9 @@ openshift_hosted_router_replicas={{ OCP_INFRA_NODES|length }}
 
 # Registry
 
+{% if CNS == "yes" %}
 openshift_hosted_registry_storage_kind=glusterfs
+{% endif %}
 openshift_hosted_registry_selector='region=infra'
 openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
 
