--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -9,6 +9,9 @@ nodes
 glusterfs_registry
 glusterfs
 {% endif %}
+new_nodes
+new_masters
+new_etcd
 
 {% if LB == "yes" %}
 [lb]
@@ -50,6 +53,16 @@ glusterfs
 {% endfor %}
 {% endif %}
 
+[new_nodes]
+#add new nodes to existing cluster 
+
+[new_masters]
+#add new masters to existing cluster 
+
+[new_etcd]
+#add new etcd to existing cluster 
+
+
 [OSEv3:vars]
 
 # ssh connection
@@ -72,9 +85,8 @@ openshift_master_htpasswd_users={'admin':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/'
 {% endif %}
 
 {% if OCP_SERVICE_CATALOG == "yes" %}
-# Enable service catalog
+# Configure service catalog
 
-openshift_enable_service_catalog=true
 openshift_template_service_broker_namespaces=['openshift']
 {% endif %}
 
@@ -118,6 +130,8 @@ openshift_cloudprovider_openstack_domain_name={{ OSP_DOMAIN_NAME }}
 openshift_cloudprovider_kind=aws
 openshift_cloudprovider_aws_access_key={{ AWS_KEY }}
 openshift_cloudprovider_aws_secret_key={{ AWS_SECRET }}
+#add following tag to each OCP cluster ec2 instance: KEY: kubernetes.io/cluster/default VALUE: 123456
+openshift_clusterid=123456
 {% endif %}
 
 {% if HTTP_PROXY == "yes" %}
@@ -144,29 +158,46 @@ openshift_hosted_router_replicas={{ OCP_INFRA_NODES|length }}
 {% if CNS == "yes" %}
 openshift_hosted_registry_storage_kind=glusterfs
 {% endif %}
+{% if AWS == "yes" %}
+#openshift_hosted_registry_storage_kind=object
+#openshift_hosted_registry_storage_provider=s3
+#openshift_hosted_registry_storage_s3_accesskey={{ AWS_KEY }}
+#openshift_hosted_registry_storage_s3_secretkey={{ AWS_SECRET }}
+#openshift_hosted_registry_storage_s3_bucket=bucket_name <-- change this
+#openshift_hosted_registry_storage_s3_region=bucket_region <-- change this
+#openshift_hosted_registry_storage_s3_chunksize=26214400
+#openshift_hosted_registry_storage_s3_rootdirectory=/registry
+#openshift_hosted_registry_pullthrough=true
+#openshift_hosted_registry_acceptschema2=true
+#openshift_hosted_registry_enforcequota=true
+{% endif %}
 openshift_hosted_registry_selector='region=infra'
 openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
 
 # Logging
 
-openshift_hosted_logging_deploy=true
-openshift_hosted_logging_storage_kind=dynamic
+openshift_logging_install_logging=true
+openshift_logging_install_eventrouter=true
+#openshift_hosted_logging_deploy=true
+#openshift_hosted_logging_storage_kind=dynamic
+openshift_logging_storage_kind=dynamic
 openshift_logging_es_nodeselector={"region":"infra"}
 openshift_logging_kibana_nodeselector={"region":"infra"}
 openshift_logging_curator_nodeselector={"region":"infra"}
+openshift_logging_eventrouter_nodeselector={"region":"infra"}
 openshift_logging_es_memory_limit=2G
-openshift_logging_es_pvc_size=5Gi
+openshift_logging_es_pvc_size=5G
 openshift_logging_curator_default_days=7
 
 # Metrics
 
-openshift_hosted_metrics_deploy=true
-openshift_metrics_cassandra_storage_type=dynamic
+openshift_metrics_install_metrics=true
+#openshift_hosted_metrics_deploy=true
+openshift_logging_storage_kind=dynamic
+#openshift_metrics_cassandra_storage_type=dynamic
 openshift_metrics_hawkular_nodeselector={"region":"infra"}
 openshift_metrics_cassandra_nodeselector={"region":"infra"}
 openshift_metrics_heapster_nodeselector={"region":"infra"}
 openshift_metrics_cassandra_limits_memory=2Gi
 openshift_metrics_cassandra_pvc_size=5Gi
-
-
 
