--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -177,14 +177,14 @@ openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
 # Logging
 
 openshift_logging_install_logging=true
-openshift_logging_install_eventrouter=true
+#openshift_logging_install_eventrouter=true
 #openshift_hosted_logging_deploy=true
 #openshift_hosted_logging_storage_kind=dynamic
 openshift_logging_storage_kind=dynamic
 openshift_logging_es_nodeselector={"region":"infra"}
 openshift_logging_kibana_nodeselector={"region":"infra"}
 openshift_logging_curator_nodeselector={"region":"infra"}
-openshift_logging_eventrouter_nodeselector={"region":"infra"}
+#openshift_logging_eventrouter_nodeselector={"region":"infra"}
 openshift_logging_es_memory_limit=2G
 openshift_logging_es_pvc_size=5G
 openshift_logging_curator_default_days=7
