--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -144,6 +144,8 @@ openshift_https_proxy={{ OCP_HTTPS_PROXY }}
 openshift_no_proxy={{ OCP_NO_PROXY }}
 openshift_builddefaults_git_http_proxy={{ OCP_HTTP_PROXY }}
 openshift_builddefaults_git_https_proxy={{ OCP_HTTPS_PROXY }}
+openshift_builddefaults_http_proxy={{ OCP_HTTP_PROXY }}
+openshift_builddefaults_https_proxy={{ OCP_HTTPS_PROXY }}
 {% endif %}
 
 # Enable cockpit
