--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -62,7 +62,6 @@ new_etcd
 [new_etcd]
 #add new etcd to existing cluster 
 
-
 [OSEv3:vars]
 
 # ssh connection
@@ -83,9 +82,6 @@ openshift_master_identity_providers=[{'name': 'idm', 'challenge': 'true', 'login
 openshift_master_identity_providers=[{'name': 'htpasswd_auth', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
 openshift_master_htpasswd_users={'admin':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/','developer':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/', 'tester':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/'}
 {% endif %}
-
-# Configure service catalog
-openshift_template_service_broker_namespaces=['openshift']
 
 # OpenShift deployment parameters
 
@@ -125,9 +121,7 @@ openshift_cloudprovider_openstack_tenant_name={{ OSP_TENANT_NAME }}
 openshift_cloudprovider_openstack_region={{ OSP_REGION }}
 openshift_cloudprovider_openstack_domain_id={{ OSP_DOMAIN_ID }}
 openshift_cloudprovider_openstack_domain_name={{ OSP_DOMAIN_NAME }}
-{% endif %}
-
-{% if AWS == "yes" %}
+{% elif AWS == "yes" %}
 # AWS
 
 openshift_cloudprovider_kind=aws
@@ -135,9 +129,7 @@ openshift_cloudprovider_aws_access_key={{ AWS_KEY }}
 openshift_cloudprovider_aws_secret_key={{ AWS_SECRET }}
 #add following tag to each OCP cluster ec2 instance: KEY: kubernetes.io/cluster/default VALUE: 123456
 openshift_clusterid=123456
-{% endif %}
-
-{% if AZURE == "yes" %}
+{% elif AZURE == "yes" %}
 # Azure
 
 openshift_cloudprovider_kind=azure
@@ -170,10 +162,12 @@ openshift_hosted_router_replicas={{ OCP_INFRA_NODES|length }}
 
 # Registry
 
+openshift_hosted_registry_selector='region=infra'
+openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
+#openshift_hosted_registry_storage_volume_size=10Gi
 {% if CNS == "yes" %}
 openshift_hosted_registry_storage_kind=glusterfs
-{% endif %}
-{% if AWS == "yes" %}
+{% elif AWS == "yes" %}
 #openshift_hosted_registry_storage_kind=object
 #openshift_hosted_registry_storage_provider=s3
 #openshift_hosted_registry_storage_s3_accesskey={{ AWS_KEY }}
@@ -185,17 +179,18 @@ openshift_hosted_registry_storage_kind=glusterfs
 #openshift_hosted_registry_pullthrough=true
 #openshift_hosted_registry_acceptschema2=true
 #openshift_hosted_registry_enforcequota=true
-{% endif %}
-{% if Azure == "yes" %}
+{% elif AZURE == "yes" %}
 #openshift_hosted_registry_storage_provider=azure_blob
 #openshift_hosted_registry_storage_azure_blob_accountname=<account-name>  <-- change this
 #openshift_hosted_registry_storage_azure_blob_accountkey=<account_key>  <-- change this
 #openshift_hosted_registry_storage_azure_blob_container=registry
 #openshift_hosted_registry_storage_azure_blob_realm=core.windows.net
+{% elif OSP == "yes" %}
+#openshift_hosted_registry_storage_kind: openstack
+#openshift_hosted_registry_storage_access_modes=['ReadWriteOnce']
+#openshift_hosted_registry_storage_openstack_filesystem=xfs
+#openshift_hosted_registry_storage_openstack_volumeID=<existing cinder volume id>
 {% endif %}
-openshift_hosted_registry_selector='region=infra'
-openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
-#openshift_hosted_registry_storage_volume_size=10Gi
 
 # Logging
 
@@ -220,8 +215,13 @@ openshift_metrics_heapster_nodeselector={"region":"infra"}
 openshift_metrics_cassandra_limits_memory=2Gi
 openshift_metrics_cassandra_pvc_size=5Gi
 
-#Management
+# Service Catalog
+
+ansible_service_broker_local_registry_whitelist=['.*-apb$']
+openshift_template_service_broker_namespaces=['openshift']
+openshift_hosted_etcd_storage_kind=dynamic
+
+# Management
 
 #openshift_management_storage_class=preconfigured
-
 
