--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -217,9 +217,11 @@ openshift_metrics_cassandra_pvc_size=5Gi
 
 # Service Catalog
 
-ansible_service_broker_local_registry_whitelist=['.*-apb$']
-openshift_template_service_broker_namespaces=['openshift']
+openshift_enable_service_catalog=true
 openshift_hosted_etcd_storage_kind=dynamic
+openshift_template_service_broker_namespaces=['openshift']
+template_service_broker_install=true
+ansible_service_broker_local_registry_whitelist=['.*-apb$']
 
 # Management
 
