--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -90,7 +90,7 @@ deployment_type=openshift-enterprise
 openshift_disable_check=disk_availability,memory_availability,docker_image_availability
 openshift_clock_enabled=true
 os_firewall_use_firewalld=true
-#containerized=false
+#from 3.9 both ports must match
 #openshift_master_api_port=8443
 #openshift_master_console_port=8443
 
