ocp local setup

--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -91,8 +91,15 @@ openshift_disable_check=disk_availability,memory_availability,docker_image_avail
 openshift_clock_enabled=true
 os_firewall_use_firewalld=true
 #from 3.9 both ports must match
-#openshift_master_api_port=8443
-#openshift_master_console_port=8443
+openshift_master_api_port=443
+openshift_master_console_port=443
+
+# CRI-O
+
+openshift_use_crio=true
+openshift_crio_use_rpm=true
+openshift_crio_enable_docker_gc=true
+#openshift_crio_docker_gc_node_selector={'runtime': 'cri-o'}
 
 # Wildcard application hostname suffix
 
@@ -234,6 +241,15 @@ openshift_hosted_etcd_storage_kind=dynamic
 openshift_template_service_broker_namespaces=['openshift']
 template_service_broker_install=true
 ansible_service_broker_local_registry_whitelist=['.*-apb$']
+
+# Prometheus
+
+#openshift_hosted_prometheus_deploy=true
+#openshift_prometheus_namespace=openshift-infra
+#openshift_prometheus_node_selector={"region":"infra"}
+#openshift_prometheus_storage_kind=dynamic
+#openshift_prometheus_alertmanager_storage_kind=dynamic
+#openshift_prometheus_alertbuffer_storage_kind=dynamic
 
 # Management
 
