--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -96,9 +96,9 @@ openshift_master_console_port=443
 
 # CRI-O
 
-openshift_use_crio=true
-openshift_crio_use_rpm=true
-openshift_crio_enable_docker_gc=true
+#openshift_use_crio=true
+#openshift_crio_use_rpm=true
+#openshift_crio_enable_docker_gc=true
 #openshift_crio_docker_gc_node_selector={'runtime': 'cri-o'}
 
 # Wildcard application hostname suffix
