--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -169,6 +169,7 @@ openshift_hosted_router_replicas={{ OCP_INFRA_NODES|length }}
 
 # Registry
 
+openshift_hosted_registry_routehost=registry.{{ OCP_DEFAULT_SUBDOMAIN }}
 openshift_hosted_registry_selector='region=infra'
 openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
 #openshift_hosted_registry_storage_volume_size=10Gi
