--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -261,7 +261,7 @@ openshift_metrics_heapster_nodeselector={"region":"infra"}
 openshift_metrics_cassandra_limits_memory=2Gi
 openshift_metrics_cassandra_pvc_size=5Gi
 {% if CNS == "yes" %}
-openshift_metrics_cassanda_pvc_storage_class_name="glusterfs-registry-block
+openshift_metrics_cassanda_pvc_storage_class_name="glusterfs-registry-block"
 {% endif %}
 
 
