--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -32,10 +32,10 @@ new_etcd
 
 [nodes]
 {% for item in OCP_MASTERS %}
-{{ item }} openshift_node_labels="{'region': 'master', 'zone':'default'}" openshift_node_group_name='node-config-master'
+{{ item }} openshift_node_group_name='node-config-master'
 {% endfor %}
 {% for item in OCP_INFRA_NODES %}
-{{ item }} openshift_node_labels="{'region': 'infra', 'zone':'default'}" node=True storage=True openshift_node_group_name='node-config-infra'
+{{ item }} node=True storage=True openshift_node_group_name='node-config-infra'
 {% endfor %}
 {% for item in OCP_APP_NODES %}
 {{ item.host }} openshift_node_labels="{'region': '{{ item.region }}', 'zone':'{{ item.zone }}', 'node-index':'{{ loop.index }}'}" node=True storage=True openshift_node_group_name='node-config-compute'
@@ -80,7 +80,7 @@ debug_level=2
 # security
 
 {% if OCP_IPA == "yes" %}
-openshift_master_identity_providers=[{'name': 'idm', 'challenge': 'true', 'login': 'true', 'kind': 'LDAPPasswordIdentityProvider', 'attributes': {'id': ['dn'], 'email': ['mail'], 'name': ['cn'], 'preferredUsername': ['uid']}, 'bindDN': 'uid=admin,cn=users,cn=accounts,{{ OCP_IPA_DOMAIN }}', 'bindPassword': '{{ OCP_IPA_PASSWORD }}', 'ca': '/etc/origin/master/ipa­.crt', 'insecure': 'false', 'url': 'ldap://{{ OCP_IPA_HOSTNAME }}/cn=users,cn=accounts,{{ OCP_IPA_DOMAIN }}?uid?sub?(memberOf=cn=ocp-users,cn=groups,cn=accounts,{{ OCP_IPA_DOMAIN }})'}]
+openshift_master_identity_providers=[{'name': 'idm', 'challenge': 'true', 'login': 'true', 'kind': 'LDAPPasswordIdentityProvider', 'attributes': {'id': ['dn'], 'email': ['mail'], 'name': ['cn'], 'preferredUsername': ['uid']}, 'bindDN': 'uid=admin,cn=users,cn=accounts,{{ OCP_IPA_DOMAIN }}', 'bindPassword': '{{ OCP_IPA_PASSWORD }}', 'ca': '/etc/origin/master/ipa.crt', 'insecure': 'false', 'url': 'ldap://{{ OCP_IPA_HOSTNAME }}/cn=users,cn=accounts,{{ OCP_IPA_DOMAIN }}?uid?sub?(memberOf=cn=ocp-users,cn=groups,cn=accounts,{{ OCP_IPA_DOMAIN }})'}]
 #AD filter: ?sAMAccountName?sub?(objectClass=organizationalPerson)
 {% else %}
 #passwords are manager1
@@ -244,31 +244,29 @@ template_service_broker_version=latest
 
 # Routers
 
-#openshift_hosted_router_selector='region=infra'
 #openshift_router_selector='node-role.kubernetes.io/infra=true'
 openshift_hosted_router_replicas={{ OCP_INFRA_NODES|length }}
 
 # Registry
 
 openshift_hosted_registry_routehost=registry.{{ OCP_DEFAULT_SUBDOMAIN }}
-#openshift_hosted_registry_selector='region=infra'
 #openshift_registry_selector='node-role.kubernetes.io/infra=true'
 openshift_hosted_registry_replicas={{ OCP_INFRA_NODES|length }}
 #openshift_hosted_registry_storage_volume_size=10Gi
 {% if CNS == "yes" %}
 openshift_hosted_registry_storage_kind=glusterfs
 {% elif AWS == "yes" %}
-#openshift_hosted_registry_storage_kind=object
-#openshift_hosted_registry_storage_provider=s3
-#openshift_hosted_registry_storage_s3_accesskey={{ AWS_KEY }}
-#openshift_hosted_registry_storage_s3_secretkey={{ AWS_SECRET }}
-#openshift_hosted_registry_storage_s3_bucket=bucket_name <-- change this
-#openshift_hosted_registry_storage_s3_region=bucket_region <-- change this
-#openshift_hosted_registry_storage_s3_chunksize=26214400
-#openshift_hosted_registry_storage_s3_rootdirectory=/registry
-#openshift_hosted_registry_pullthrough=true
-#openshift_hosted_registry_acceptschema2=true
-#openshift_hosted_registry_enforcequota=true
+openshift_hosted_registry_storage_kind=object
+openshift_hosted_registry_storage_provider=s3
+openshift_hosted_registry_storage_s3_accesskey={{ AWS_KEY }}
+openshift_hosted_registry_storage_s3_secretkey={{ AWS_SECRET }}
+openshift_hosted_registry_storage_s3_bucket=bucket_name <-- change this
+openshift_hosted_registry_storage_s3_region=bucket_region <-- change this
+openshift_hosted_registry_storage_s3_chunksize=26214400
+openshift_hosted_registry_storage_s3_rootdirectory=/registry
+openshift_hosted_registry_pullthrough=true
+openshift_hosted_registry_acceptschema2=true
+openshift_hosted_registry_enforcequota=true
 {% elif AZURE == "yes" %}
 openshift_hosted_registry_storage_provider=azure_blob
 openshift_hosted_registry_storage_azure_blob_accountname=<accountname>  <-- change this
@@ -302,10 +300,10 @@ openshift_hosted_registry_storage_annotations=['volume.beta.kubernetes.io/storag
 
 openshift_logging_install_logging=true
 openshift_logging_storage_kind=dynamic
-openshift_logging_es_nodeselector={"region":"infra"}
-openshift_logging_kibana_nodeselector={"region":"infra"}
-openshift_logging_curator_nodeselector={"region":"infra"}
-#openshift_logging_eventrouter_nodeselector={"region":"infra"}
+openshift_logging_es_nodeselector={"node-role.kubernetes.io/infra":"true"}
+openshift_logging_kibana_nodeselector={"node-role.kubernetes.io/infra":"true"}
+openshift_logging_curator_nodeselector={"node-role.kubernetes.io/infra":"true"}
+#openshift_logging_eventrouter_nodeselector={"node-role.kubernetes.io/infra":"true"}
 openshift_logging_es_memory_limit=2G
 openshift_logging_es_pvc_size=5G
 openshift_logging_curator_default_days=7
@@ -317,9 +315,9 @@ openshift_logging_es_pvc_storage_class_name="glusterfs-registry-block"
 
 openshift_metrics_install_metrics=true
 openshift_metrics_cassandra_storage_type=dynamic
-openshift_metrics_hawkular_nodeselector={"region":"infra"}
-openshift_metrics_cassandra_nodeselector={"region":"infra"}
-openshift_metrics_heapster_nodeselector={"region":"infra"}
+openshift_metrics_hawkular_nodeselector={"node-role.kubernetes.io/infra":"true"}
+openshift_metrics_cassandra_nodeselector={"node-role.kubernetes.io/infra":"true"}
+openshift_metrics_heapster_nodeselector={"node-role.kubernetes.io/infra":"true"}
 openshift_metrics_cassandra_limits_memory=2Gi
 openshift_metrics_cassandra_pvc_size=5Gi
 {% if CNS == "yes" %}
@@ -339,7 +337,7 @@ ansible_service_broker_local_registry_whitelist=['.*-apb$']
 
 #openshift_hosted_prometheus_deploy=true
 #openshift_prometheus_namespace=openshift-infra
-#openshift_prometheus_node_selector={"region":"infra"}
+#openshift_prometheus_node_selector={"node-role.kubernetes.io/infra":"true"}
 #openshift_prometheus_storage_kind=dynamic
 #openshift_prometheus_alertmanager_storage_kind=dynamic
 #openshift_prometheus_alertbuffer_storage_kind=dynamic
