--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -84,7 +84,7 @@ openshift_master_identity_providers=[{'name': 'idm', 'challenge': 'true', 'login
 #AD filter: ?sAMAccountName?sub?(objectClass=organizationalPerson)
 {% else %}
 #passwords are manager1
-openshift_master_identity_providers=[{'name': 'htpasswd_provider', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider', 'filename': '/etc/origin/master/htpasswd'}]
+openshift_master_identity_providers=[{'name': 'htpasswd_provider', 'login': 'true', 'challenge': 'true', 'kind': 'HTPasswdPasswordIdentityProvider'}]
 openshift_master_htpasswd_users={'admin':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/','developer':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/', 'tester':'$apr1$AFC0UGRq$..GYeSig63Bv4e7zzzfFD/'}
 #openshift_master_identity_providers=[{'name': 'allow_all_provider', 'login': 'true', 'challenge': 'true', 'kind': 'AllowAllPasswordIdentityProvider']
 {% endif %}
