--- a/inventory-glusterfs.j2
+++ b/inventory-glusterfs.j2
@@ -101,7 +101,8 @@ os_firewall_use_firewalld=true
 openshift_master_api_port=443
 openshift_master_console_port=443
 openshift_web_console_inactivity_timeout_minutes=10
-#openshift_master_named_certificates=[{"certfile": "/local/path/to/{{ OCP_MASTER_PUBLIC_HOSTNAME }}.crt", "keyfile": "/local/path/to/{{ OCP_MASTER_PUBLIC_HOSTNAME }}.key", "names": ["{{ OCP_MASTER_PUBLIC_HOSTNAME }}"], "cafile": "/path/to/{{ OCP_MASTER_PUBLIC_HOSTNAME }}.ca.crt" }]
+#public key, ca cert and hostname cert
+#openshift_master_named_certificates=[{"certfile": "/local/path/to/{{ OCP_MASTER_PUBLIC_HOSTNAME }}.crt", "keyfile": "/local/path/to/{{ OCP_MASTER_PUBLIC_HOSTNAME }}.key", "names": ["{{ OCP_MASTER_PUBLIC_HOSTNAME }}"], "cafile": "/local/path/to/{{ OCP_MASTER_PUBLIC_HOSTNAME }}.ca.crt" }]
 
 # CRI-O
 
@@ -247,6 +248,7 @@ template_service_broker_version=latest
 
 openshift_router_selector='node-role.kubernetes.io/infra=true'
 openshift_hosted_router_replicas={{ OCP_INFRA_NODES|length }}
+#public key, ca cert and wildcard cert
 #openshift_hosted_router_certificate={"certfile": "/local/path/to/{{ OCP_DEFAULT_SUBDOMAIN }}.crt", "keyfile": "/local/path/to/{{ OCP_DEFAULT_SUBDOMAIN }}.key", "cafile": "/local/path/to/{{ OCP_DEFAULT_SUBDOMAIN }}.ca.crt"}
 
 # Registry
